pld-comp/tests/ifcc-test-output/testfiles-3_5_aplusbpasdeclare/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:13: error: ‘b’ undeclared (first use in this function)
    2 |     int a=5+b;
      |             ^
input.c:2:13: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
